# SVSound

./: README.md  __init__.py  meta.yaml  pyproject.toml  setup.py  wavefile.py
recorders/: __init__.py  decimus.py  generic.py  icListen.py  zoom.py
src/SVSound/: __init__.py  levels.py  sgwave.py  wavefile.py
src/SVSound/levels/: SPLWeighting.py  sel.py  spl.py  wav_spl.py
src/SVSound/recorders/: AudioMoth.py  __init__.py  generic.py  icListen.py  lars.py  zoom.py
